# graphtuitous

./: .gitignore  .kube-linter.yaml  README.md  app.js  app.js.bak  apply-all  bgbuild  build-blue-green-images  build.cmd  build.sh  changed_directories  choose-registry.cmd  compute_change.sh  delete-all  delete.cmd  delete.sh  demo  deploy-helper  deploy.cmd  deploy.sh  dev.cmd  dev.sh  docker-compose-dev.yml  docker-compose.yml  env-vars  fib-go-06a285f_digest.txt  fib-go-3d43ee2_digest.txt  fib-go-46bf485_digest.txt  fib-go-5c81ed0_digest.txt  fib-go-9ae0e84_digest.txt  fib-go-a3b1777_digest.txt  fib-node-06a285f_digest.txt  fib-node-9ae0e84_digest.txt  fib-node-a3b1777_digest.txt  frontend-06a285f_digest.txt  frontend-9ae0e84_digest.txt  frontend-a3b1777_digest.txt  gh-workflow-pre-release.yaml  haproxy-06a285f_digest.txt  haproxy-9ae0e84_digest.txt  (+15 more)
.tekton/: fib-go-pull-request.yaml  fib-go-push.yaml  fib-node-pull-request.yaml  fib-node-push.yaml  frontend-pull-request.yaml  frontend-push.yaml  graphtuitous-pull-request.yaml  graphtuitous-push.yaml  haproxy-pull-request.yaml  haproxy-push.yaml
bgdemo/: d-blue.yaml  d-green.yaml  service.yaml
deploy/: deployment.yaml  service.yaml
deploy-local-kube/: deployment-blue.yaml  deployment-green.yaml  service.yaml
deploy-openshift/: route.yaml
fib-go/: .air.conf  Dockerfile  Dockerfile-dev  _build  deploy.yaml  dev.cmd  dev.sh  devfile.yaml  fib.go  go.mod
fib-node/: Dockerfile  Dockerfile-dev  app.js  deploy.yaml  (+4 more)
fib-rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  dev.sh
fib-rust/src/: main.rs
(+133 files in other folders)
