[package]
name = "fib-rust"
version = "0.1.0"
edition = "2024"

[dependencies] 
serde = { version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"   
rocket = { version = "0.5.1", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size.
strip = true